# agora-gstreamer

./: README.md  build_all.sh  build_all_3.7.sh  build_all_arm.sh  demo.h264  fw  samples  start.sh
agora/agora_sdk/: .gitignore  PACKAGE_INFO  README.zh.md
agora/libagorac/: CMakeLists.txt  agorac.cpp  agorac.h  agoraconfig.h  agoraevent.cpp  agoraio.cpp  agoraio.h  agoralite.cpp  agoralite.h  agorareceiver.cpp  agorareceiver.h  agoratype.h  crash_context  install-arm.sh  install.sh  jitterbuffer.cpp  jitterbuffer.h  makefile  syncbuffer.cpp  syncbuffer.h  userobserver.cpp  userobserver.h  workqueue.h
agora/libagorac/file_parser/: helper_aac_parser.cpp  helper_h264_parser.cpp  helper_h264_parser.h
agora/libagorac/helpers/: agoraconstants.h  agoradecoder.cpp  agoraencoder.cpp  agoraencoder.h  context.h  localconfig.cpp  uidtofile.cpp  uidtofile.h  utilities.cpp  utilities.h
agora/libagorac/observer/: connectionobserver.cpp  connectionobserver.h  h264frameobserver.cpp  h264frameobserver.h  pcmframeobserver.cpp  pcmframeobserver.h  userobserver.cpp  userobserver.h  yuvframeobserver.cpp  yuvframeobserver.h
agora/sdk/agora_sdk/include/: AgoraMediaBase.h  NGIAgoraLocalUser.h  NGIAgoraRtmpConnection.h
agora/sdk/agora_sdk372/agora_sdk/include/: AgoraBase.h  AgoraMediaBase.h  AgoraMediaPlayerTypes.h  IAgoraMediaPlayerSource.h  IAgoraService.h  NGIAgoraAudioTrack.h  NGIAgoraLocalUser.h  NGIAgoraMediaNode.h  NGIAgoraScreenCapturer.h  NGIAgoraVideoTrack.h
agora/sdk/agora_sdk382/agora_sdk/include/: AgoraBase.h  AgoraExtensionProviderEntry.h  AgoraMediaBase.h  IAgoraLog.h  IAgoraService.h  NGIAgoraAudioTrack.h  NGIAgoraLocalUser.h  NGIAgoraRtcConnection.h  NGIAgoraVideoTrack.h
agora/sdk/agora_sdk3822/agora_sdk/include/: AgoraBase.h  AgoraMediaBase.h  IAgoraMediaPlayerSource.h  IAgoraRtmpStreamingService.h  NGIAgoraLocalUser.h
agora/sdk/agora_sdk_36/agora_sdk/include/: IAgoraLog.h  IAgoraParameter.h  NGIAgoraVideoFrame.h
agora/sdk/agora_sdk_4.2.30/agora_sdk/include/: AgoraBase.h  IAgoraService.h  NGIAgoraAudioDeviceManager.h  NGIAgoraAudioMixerSource.h  NGIAgoraAudioTrack.h  NGIAgoraExtensionScreenSource.h  NGIAgoraLocalUser.h
agora/sdk/agora_sdk_aarch64_4.2.32/agora_sdk/include/: AgoraBase.h  IAgoraMediaRelayService.h  IAgoraService.h  NGIAgoraAudioTrack.h  NGIAgoraCameraCapturer.h  NGIAgoraConfigCenter.h  NGIAgoraLocalUser.h  NGIAgoraMediaNode.h  NGIAgoraRtmpLocalUser.h  NGIAgoraVideoFrame.h
agora/sdk/agora_sdk_rtsa_lite/agora_sdk/include/: agora_rtc_api.h
agora/sdk/arm/agora_sdk/include/: AgoraBase.h  AgoraMediaBase.h  AgoraOptional.h  IAgoraLog.h  IAgoraMediaPlayerSource.h  IAgoraParameter.h  IAgoraService.h  NGIAgoraAudioDeviceManager.h  NGIAgoraAudioTrack.h  NGIAgoraCameraCapturer.h  NGIAgoraMediaNodeFactory.h  NGIAgoraRemoteAudioMixerSource.h  NGIAgoraRtmpLocalUser.h  NGIAgoraScreenCapturer.h  NGIAgoraVideoFrame.h
agora/sdk/arm3822/agora_sdk/include/: AgoraBase.h  IAgoraParameter.h  (+7 more)
agora/sdk_v43200/agora_sdk/include/: AgoraBase.h  IAgoraMediaPlayerSource.h  IAgoraParameter.h  NGIAgoraCameraCapturer.h  NGIAgoraLocalUser.h  NGIAgoraRtmpLocalUser.h  NGIAgoraScreenCapturer.h
agorasink/: meson.build
agorasink/gst-plugin/: meson.build
agorasink/gst-plugin/src/: gstagorasink.c  gstagorasink.h  gstagorasrc.c  gstagorasrc.h  gstplugin.h
agorasink/libagorac/: agorac.cpp  agorac.h  agorareceiver.cpp  agorareceiver.h  agoratype.h  c  crash_context  install.sh  makefile  userobserver.cpp  userobserver.h  videotestsrc.mov
agorasink/libagorac/helpers/: agoradecoder.cpp  agoradecoder.h  agoraencoder.h  agoralog.cpp  agoralog.h  context.h  localconfig.h
agorasink/release/: install.sh
gst-agora/: CMakeLists.txt  arm64.cmake  c  cp-bin  meson.build
gst-agora/plugin-src/: arm.build  meson.build
gst-agora/plugin-src/agoraio/: gstagoraio.c  gstagoraio.h
gst-agora/plugin-src/agoraioudp/: gstagoraioudp.c  gstagoraioudp.h
gst-agora/plugin-src/agorasink/: gstagorasink.c  gstagorasink.h
gst-agora/plugin-src/agorasrc/: gstagorasrc.c  gstagorasrc.h
gst-agora/plugin-src/shared/: agorah264parser.c  agorah264parser.h
gst-agora/plugin-src/template/: gstplugin.c
old_build/: build_all_3.8.2.sh  build_all_3.8.sh  build_all_arm.sh  build_all_arm382.sh  build_all_arm_3.8.2.sh  build_all_arm_on_intel_3.8.2.sh  build_all_pi.sh
release/: install.sh  make-release
test/: build_all.sh  c  common.c  common.h  endtest1.c  endtest2.c  r  reset_proxy_fw.sh  run.sh  set_proxy.sh  set_proxy_fw.sh  test_agora_sink.c  test_agora_sink2.c  test_arm.c  test_call_end.c  test_lite.c  test_mode1.c  test_pause_resume.c  test_print_plugin_state.c  test_proxy.c  test_publish_unpublish.c  test_sep_pipes.c  test_signals.c  test_sync_buffer.c
test-stats/v34/: CMakeLists.txt  test-yuv.sh  test_remote_stats.cpp  test_remote_stats_yuv.cpp
test-stats/v34/agorasdk34/include/: AgoraBase.h  AgoraMediaPlayerTypes.h  AgoraRefPtr.h  IAgoraMediaRelayService.h  NGIAgoraVideoTrack.h
test-stats/v34/common/: helper.cpp  helper.h  log.h  sample_connection_observer.cpp  sample_local_user_observer.h  sample_local_user_observer2.cpp  sample_local_user_observer2.h  switch_video_stream_base.h  write_csvfile.cpp
test-stats/v34/common/file_parser/: helper_h264_parser.cpp
test-stats/v35/: CMakeLists.txt  test_remote_stats.cpp
test-stats/v35/common/: opt_parser.cpp  sample_common.cpp  sample_common.h  sample_local_user_observer.h  sample_local_user_observer2.h
test-stats/v35/common/file_parser/: helper_opus_parser.h
test-stats/v36/: CMakeLists.txt  test-h264.sh  test_remote_stats.cpp  test_remote_stats_yuv.cpp
test-stats/v36/agorasdk36/include/: AgoraExtensionProviderEntry.h  IAgoraParameter.h  IAgoraService.h  NGIAgoraVideoTrack.h
test-stats/v36/common/: opt_parser.h  sample_connection_observer.cpp  sample_connection_observer.h  sample_event.cpp  sample_event.h  sample_local_user_observer.cpp  sample_local_user_observer.h  sample_local_user_observer2.cpp  sample_local_user_observer2.h  write_csvfile.h
test-stats/v36/common/file_parser/: helper_aac_parser.h  helper_opus_parser.cpp
(+21 files in other folders)
